@@ -6,6 +6,11 @@ import com.example.livescore.enums.GameState;
 import com.example.livescore.models.*;
 import com.example.livescore.repository.*;
 import com.example.livescore.service.game.GameService;
+import com.example.livescore.service.group.GroupService;
+import com.example.livescore.service.player_statistics.PlayerStatisticsService;
+import com.example.livescore.service.protocol.ProtocolService;
+import com.example.livescore.service.team.TeamFootballService;
+import com.example.livescore.service.team_statistics.TeamStatisticsService;
 import com.example.livescore.web.games.GameDTO;
 import com.example.livescore.web.games.SaveGameDTO;
 import org.springframework.stereotype.Service;
@@ -15,24 +20,25 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class DefaultGameService
         extends AbstractFootballService<GameEntity, GameDTO, SaveGameDTO, Long, GameRepository>
         implements GameService {
 
-    private final GroupRepository groupRepository;
-    private final ProtocolRepository protocolRepository;
-    private final TeamRepository teamRepository;
-    private final TeamStatisticsRepository teamStatisticsRepository;
+    private final TeamFootballService teamFootballService;
+    private final GroupService groupService;
+    private final ProtocolService protocolService;
+    private final TeamStatisticsService teamStatisticsService;
+    private final PlayerStatisticsService playerStatisticsService;
 
-    public DefaultGameService(GameRepository repository, GroupRepository groupRepository, ProtocolRepository protocolRepository, TeamRepository teamRepository, TeamStatisticsRepository teamStatisticsRepository) {
+    public DefaultGameService(GameRepository repository, TeamFootballService teamFootballService, GroupService groupService, ProtocolService protocolService, TeamStatisticsService teamStatisticsService, PlayerStatisticsService playerStatisticsService) {
         super(repository);
-        this.groupRepository = groupRepository;
-        this.protocolRepository = protocolRepository;
-        this.teamRepository = teamRepository;
-        this.teamStatisticsRepository = teamStatisticsRepository;
+        this.teamFootballService = teamFootballService;
+        this.groupService = groupService;
+        this.protocolService = protocolService;
+        this.teamStatisticsService = teamStatisticsService;
+        this.playerStatisticsService = playerStatisticsService;
     }
 
     @Override
@@ -44,7 +50,7 @@ public class DefaultGameService
         return repository.findAllByGameDate(date1, date2)
                 .stream()
                 .map(GameEntity::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -58,30 +64,34 @@ public class DefaultGameService
     @Override
     @Transactional
     public GameDTO startMatch(Long gameId) {
-        Optional<GameEntity> foundGame = repository.findById(gameId);
-        if (foundGame.isEmpty()) {
-            throw ResourceNotFoundException.build(gameId, "GameEntity");
-        } else {
-            GameEntity gameEntity = foundGame.get();
-            if (gameEntity.getGameState() == GameState.STARTED) {
-                return gameEntity.toDTO();
-            }
-            GroupEntity group = gameEntity.getGroup();
-            TeamEntity team1 = gameEntity.getProtocol().getTeam1();
-            TeamEntity team2 = gameEntity.getProtocol().getTeam2();
-
-            repository.updateIsPlayed(gameId);
-            increaseGameCount(group, team1, team2);
-            gameEntity.setGameState(GameState.STARTED);
-
-
+        GameEntity gameEntity = findEntityById(gameId);
+        if (gameEntity.getGameState() == GameState.STARTED) {
             return gameEntity.toDTO();
         }
+        GroupEntity group = gameEntity.getGroup();
+        TeamEntity team1 = gameEntity.getProtocol().getTeam1();
+        TeamEntity team2 = gameEntity.getProtocol().getTeam2();
+
+        repository.updateIsPlayed(gameId);
+        increaseGameCount(group, team1);
+        increaseGameCount(group, team2);
+        gameEntity.setGameState(GameState.STARTED);
+
+        return gameEntity.toDTO();
+    }
+
+    @Override
+    public GameEntity findEntityById(long id) {
+        Optional<GameEntity> foundGame = repository.findById(id);
+        if (foundGame.isEmpty()) {
+            throw ResourceNotFoundException.build(id, "GameEntity");
+        }
+        return foundGame.get();
     }
 
     @Override
     public GameDTO save(SaveGameDTO dto) {
-        GroupEntity group = getGroupById(dto.getGroupId());
+        GroupEntity group = groupService.findEntityById(dto.getGroupId());
         GameEntity createdGame = createGameEntity(group);
         ProtocolEntity defaultProtocol = createDefaultProtocol(createdGame, dto);
 
@@ -104,39 +114,26 @@ public class DefaultGameService
         ProtocolEntity protocol = new ProtocolEntity(
                 null,
                 savedEntity,
-                getTeamById(dto.getTeam1Id()),
-                getTeamById(dto.getTeam2Id()),
+                teamFootballService.findEntityById(dto.getTeam1Id()),
+                teamFootballService.findEntityById(dto.getTeam2Id()),
                 dto.getDateTime(),
                 0,
                 0,
                 null
         );
-        return protocolRepository.save(protocol);
+        return protocolService.saveAndFlush(protocol);
     }
 
-    private GroupEntity getGroupById(long id) {
-        Optional<GroupEntity> referenceById = groupRepository.findById(id);
-        if (referenceById.isEmpty()) {
-            throw ResourceNotFoundException.build(id, "GroupEntity");
-        } else {
-            return referenceById.get();
-        }
+    private void increaseGameCount(GroupEntity group, TeamEntity team) {
+        TeamStatisticsEntityPK teamPK = new TeamStatisticsEntityPK(group, team);
+        teamStatisticsService.incrementGameCount(teamPK);
+
+        team.getPlayers()
+                .forEach(player -> increaseGamePlayed(group, player));
     }
 
-    private TeamEntity getTeamById(long id) {
-        Optional<TeamEntity> referenceById = teamRepository.findById(id);
-        if (referenceById.isEmpty()) {
-            throw ResourceNotFoundException.build(id, "TeamEntity");
-        } else {
-            return referenceById.get();
-        }
-    }
-
-    private void increaseGameCount(GroupEntity group, TeamEntity team1, TeamEntity team2) {
-        TeamStatisticsEntityPK team1PK = new TeamStatisticsEntityPK(group, team1);
-        TeamStatisticsEntityPK team2PK = new TeamStatisticsEntityPK(group, team2);
-        System.out.println("update game count");
-        teamStatisticsRepository.incrementGameCount(team1PK);
-        teamStatisticsRepository.incrementGameCount(team2PK);
+    private void increaseGamePlayed(GroupEntity group, PlayerEntity player) {
+        PlayerStatisticsEntityPK playerPk = new PlayerStatisticsEntityPK(group, player);
+        playerStatisticsService.incrementGamePlayed(playerPk);
     }
 }
